--- a/About.html
+++ b/About.html
@@ -30,7 +30,7 @@
     <section class="about">
         <div class="main-about">
             <h1>About</h1>
-            <p>wael.iconk@gmail.com</p>
+            <p>karimmassoud668@gmail.com</p>
         </div>
 
         <div class="story">
@@ -47,7 +47,7 @@
     </section>
 
     <div class="pic">
-        <img src="img/WhatsApp Image 2025-01-05 at 01.00.35_520b221c.png" alt="">
+        <img src="img/Picture of me.png" alt="image">
     </div>
 
 </body>
