--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 </head>
 
 <body>
-
     <header>
         <div class="main-head">
             <ul class="head">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Resume.html">Resume</a></li>
-                <li><a href="Portfolio.html">Portfolio</a></li>
+                <li><a href="Portfolio.html">Learning Outcomes</a></li>
             </ul>
         </div>
     </header>
@@ -37,16 +36,16 @@
             <h3>Massaoud</h3>
             <p>Web Developer</p>
             <div class="btn">
-                <a class="button" href="Documents/wael-1.pdf" target="_blank">CV</a>
-                <a class="button" href="Portfolio.html">Portfolio</a>
+                <a class="button" href="" target="_blank">CV</a>
+                <a class="button" href="Portfolio.html">Projects</a>
             </div>
         </div>
         <div class="social-media">
-            <a href="https://www.facebook.com/waeel.ayman.7/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/wael_.ayman/profilecard/?igsh=YXRud3d3bXZjdm9o" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://wa.me/qr/FQCWNEX6EDQPM1" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="https://github.com/ic0nk" target="_blank"><i class="fa-brands fa-github"></i></a>
-            <a href="tel:+201559662015"><i class="fa-solid fa-phone"></i></a>
+            <a href="https://github.com/karimmassaoudd" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="tel:+0616537940"><i class="fa-solid fa-phone"></i></a>
         </div>
     </div>
 
