--- a/About.html
+++ b/About.html
@@ -34,15 +34,15 @@
         </div>
 
         <div class="story">
-            <p>I'm a web developer with a passion for crafting exceptional digital experiences. With a strong foundation in design tools like Figma, Photoshop, Blender, and Canva, I bring a unique perspective to my projects. I've honed my skills through a variety of projects, gaining valuable experience in the industry. My goal is to create websites that not only look stunning but also deliver a seamless and intuitive user experience. I'm constantly exploring new technologies and design trends to stay at the forefront of my field. I see code as a powerful tool for bringing ideas to life, and I'm excited to see where my journey takes me.</p>
+            <p>I'm a passionate web developer with a strong design background, skilled in tools like Figma, Photoshop, Blender, and Canva. I create visually appealing, user-friendly websites and stay updated with the latest tech and design trends. I see coding as a creative way to bring ideas to life and continuously seek opportunities to grow and innovate in the digital space.</p>
         </div>
 
         <div class="social-media">
-            <a href="https://www.facebook.com/waeel.ayman.7/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/wael_.ayman/profilecard/?igsh=YXRud3d3bXZjdm9o" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://wa.me/qr/FQCWNEX6EDQPM1" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="https://github.com/ic0nk" target="_blank"><i class="fa-brands fa-github"></i></a>
-            <a href="tel:+201559662015"><i class="fa-solid fa-phone"></i></a>
+            <a href="https://github.com/karimmassaoudd" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="tel:+0616537940"><i class="fa-solid fa-phone"></i></a>
         </div>
     </section>
 
