--- a/About.html
+++ b/About.html
@@ -22,7 +22,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="About.html" class="active">About</a></li>
                 <li><a href="Resume.html">Resume</a></li>
-                <li><a href="Portfolio.html">Portfolio</a></li>
+                <li><a href="Project.html">Project</a></li>
             </ul>
         </div>
     </header>
@@ -39,7 +39,7 @@
 
         <div class="social-media">
             <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/karimmassaoudd?igsh=MnRseWt5d3JuZDh0" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://wa.me/qr/FQCWNEX6EDQPM1" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             <a href="https://github.com/karimmassaoudd" target="_blank"><i class="fa-brands fa-github"></i></a>
             <a href="tel:+0616537940"><i class="fa-solid fa-phone"></i></a>
