--- a/Resume.html
+++ b/Resume.html
@@ -23,7 +23,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Resume.html" class="active">Resume</a></li>
-                <li><a href="Portfolio.html">Portfolio</a></li>
+                <li><a href="Project.html">Project</a></li>
             </ul>
         </div>
     </header>
