--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Resume.html">Resume</a></li>
-                <li><a href="Portfolio.html">Learning Outcomes</a></li>
+                <li><a href="Project.html">Project</a></li>
             </ul>
         </div>
     </header>
@@ -34,15 +34,15 @@
         <div class="text-section">
             <h1>Karim</h1>
             <h3>Massaoud</h3>
-            <p>Web Developer</p>
+            <p>Front-end Developer</p>
             <div class="btn">
-                <a class="button" href="" target="_blank">CV</a>
-                <a class="button" href="Portfolio.html">Projects</a>
+                <a class="button" href="Project.html#Learning-Outcomes">Learning Outcomes</a>
+                <a class="button" href="Project.html">Projects</a>
             </div>
         </div>
         <div class="social-media">
             <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/karimmassaoudd?igsh=MnRseWt5d3JuZDh0" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://wa.me/qr/FQCWNEX6EDQPM1" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             <a href="https://github.com/karimmassaoudd" target="_blank"><i class="fa-brands fa-github"></i></a>
             <a href="tel:+0616537940"><i class="fa-solid fa-phone"></i></a>
