--- a/Project.html
+++ b/Project.html
@@ -29,7 +29,7 @@
 
     <!-- Learning-Outcomes-section -->
     <section class="Learning-Outcomes-section" id="Learning-Outcomes">
-        <h2>Learning Outcomes</h2>
+        <h2>Learning Outcomes, <br> Research & Feedbacks</h2>
         <div class="main">
             <div class="card" id="card-1">
                 <div class="slideshow-container" data-slide-index="1">
@@ -138,7 +138,6 @@
 
     <!-- Templates section -->
     <section class="templates-section">
-        <h2>Templates</h2>
         <div class="main">
             <div class="card0" id="card-1">
                 <div class="slideshow-container" data-slide-index="1">
