big changes for the project page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Resume.html">Resume</a></li>
-                <li><a href="Project.html">Project</a></li>
+                <li><a href="project.html">Project</a></li>
+                <li><a href="Learning Outcomes.html">Learning Outcomes</a></li>
             </ul>
         </div>
     </header>
@@ -36,8 +37,8 @@
             <h3>Massaoud</h3>
             <p>Front-end Developer</p>
             <div class="btn">
-                <a class="button" href="Project.html#Learning-Outcomes">Learning Outcomes</a>
-                <a class="button" href="Project.html">Projects</a>
+                <a class="button" href="Learning Outcomes.html">Learning Outcomes</a>
+                <a class="button" href="project.html">Projects</a>
             </div>
         </div>
         <div class="social-media">
