--- a/About.html
+++ b/About.html
@@ -22,7 +22,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="About.html" class="active">About</a></li>
                 <li><a href="Resume.html">Resume</a></li>
-                <li><a href="Project.html">Project</a></li>
+                <li><a href="project.html">Project</a></li>
+                <li><a href="Learning Outcomes.html">Learning Outcomes</a></li>
             </ul>
         </div>
     </header>
