--- a/Project.html
+++ b/Project.html
@@ -54,10 +54,8 @@
                     </div>
                 </div>
                 <div class="contact">
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
-                        dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
-                        blandit justo, vel dictum neque ex vel diam.</p>
+                    <h3 id="Lo1">LO1: Interactive Media Products</h3>
+                    <p>My portfolio is an interactive website that shows my design and development skills.</p>
                     <div>    
                         <a href="#" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
                     </div>
@@ -87,10 +85,8 @@
                     </div>
                 </div>
                 <div class="contact">
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
-                        dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
-                        blandit justo, vel dictum neque ex vel diam.</p>
+                    <h3 id="Lo2">LO2: Development & Version Control</h3>
+                    <p> develop projects using tools like Visual Studio Code with HTML, CSS, JavaScript, and more. By integrating Git and GitHub, I manage code versions, collaborate smoothly, and maintain clean, organized workflows for efficient and reliable development.</p>
                     <div>    
                         <a href="#" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
                     </div>
@@ -120,10 +116,8 @@
                     </div>
                 </div>
                 <div class="contact">
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
-                        dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
-                        blandit justo, vel dictum neque ex vel diam.</p>
+                    <h3>LO3: Iterative Design</h3>
+                    <p>I started with some ideas and sketches, then improved the design based on feedback.</p>
                     <div>    
                         <a href="#" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
                     </div>
