--- a/Learning Outcomes.html
+++ b/Learning Outcomes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Project.css">
+    <link rel="stylesheet" href="Learning outcomes.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -22,7 +22,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Resume.html">Resume</a></li>
-                <li><a href="Project.html" class="active0">Project</a></li>
+                <li><a href="project.html">Project</a></li>
+                <li><a href="Learning Outcomes.html">Learning Outcomes</a></li>
             </ul>
         </div>
     </header>
@@ -54,8 +55,10 @@
                     </div>
                 </div>
                 <div class="contact">
-                    <h3 id="Lo1">LO1: Interactive Media Products</h3>
-                    <p>My portfolio is an interactive website that shows my design and development skills.</p>
+                    <h3>Project Name</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
+                        dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
+                        blandit justo, vel dictum neque ex vel diam.</p>
                     <div>    
                         <a href="#" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
                     </div>
@@ -85,8 +88,10 @@
                     </div>
                 </div>
                 <div class="contact">
-                    <h3 id="Lo2">LO2: Development & Version Control</h3>
-                    <p> develop projects using tools like Visual Studio Code with HTML, CSS, JavaScript, and more. By integrating Git and GitHub, I manage code versions, collaborate smoothly, and maintain clean, organized workflows for efficient and reliable development.</p>
+                    <h3>Project Name</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
+                        dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
+                        blandit justo, vel dictum neque ex vel diam.</p>
                     <div>    
                         <a href="#" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
                     </div>
@@ -116,8 +121,10 @@
                     </div>
                 </div>
                 <div class="contact">
-                    <h3>LO3: Iterative Design</h3>
-                    <p>I started with some ideas and sketches, then improved the design based on feedback.</p>
+                    <h3>Project Name</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
+                        dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
+                        blandit justo, vel dictum neque ex vel diam.</p>
                     <div>    
                         <a href="#" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
                     </div>
