--- a/Learning Outcomes.html
+++ b/Learning Outcomes.html
@@ -20,27 +20,27 @@
         <div class="main-head">
             <input type='checkbox' id='check' />
             <ul class="head">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="About.html">About</i></a></li>
-                <li><a href="Resume.html">Resume</a></li>
+                <li><a class="btnn" href="index.html">Home</a></li>
+                <li><a class="btnn" href="About.html">About</i></a></li>
+                <li><a class="btnn" href="Resume.html">Resume</a></li>
                 <li class="menu">
-                    <a href="#">Projects <i class="fa-solid fa-caret-down"></i></a>
+                    <a class="btnn" href="Projects.html">Projects <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu">
-                        <li><a href="#">Branding</a></li>
+                        <li><a href="Branding.html">Branding</a></li>
                         <li><a href="#">create that UX</a></li>
                         <li><a href="#">personal project</a></li>
                         <li><a href="#">development project</a></li>
                     </ul>
                 </li>
                 <li class="menu">
-                    <a href="Learning Outcomes.html">Learning Outcomes <i class="fa-solid fa-caret-down"></i></a>
+                    <a class="btnn" href="Learning Outcomes.html">Learning Outcomes <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu" id="submenu0">
-                        <li><a href="#">LO1: Interactive Media Products</a></li>
-                        <li><a href="#">LO2: Iterative Design</a></li>
-                        <li><a href="#">LO3: Development & version control</a></li>
-                        <li><a href="#">LO4: Professional Standard</a></li>
-                        <li><a href="#">LO5: Personal Leadership</a></li>
-                        <li><a href="#">User Research</a></li>
+                        <li><a href="Interactive-Media-Products.html">LO1: Interactive Media Products</a></li>
+                        <li><a href="Iterative-Design.html">LO2: Iterative Design</a></li>
+                        <li><a href="Development&version-control.html">LO3: Development & version control</a></li>
+                        <li><a href="Professional-Standard.html">LO4: Professional Standard</a></li>
+                        <li><a href="Personal-Leadership.html">LO5: Personal Leadership</a></li>
+                        <li><a href="User-Research.html">User Research</a></li>
                     </ul>
                 </li>
                 <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
