--- a/Learning Outcomes.html
+++ b/Learning Outcomes.html
@@ -33,7 +33,7 @@
                     </ul>
                 </li>
                 <li class="menu">
-                    <a class="btnn" href="Learning Outcomes.html">Learning Outcomes <i class="fa-solid fa-caret-down"></i></a>
+                    <a class="btnn" href="Learning Outcomes.html" id="active">Learning Outcomes <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu" id="submenu0">
                         <li><a href="Interactive-Media-Products.html">LO1: Interactive Media Products</a></li>
                         <li><a href="Iterative-Design.html">LO2: Iterative Design</a></li>
