--- a/Projects.html
+++ b/Projects.html
@@ -24,7 +24,7 @@
                 <li><a class="btnn" href="About.html">About</i></a></li>
                 <li><a class="btnn" href="Resume.html">Resume</a></li>
                 <li class="menu">
-                    <a class="btnn" href="Projects.html">Projects <i class="fa-solid fa-caret-down"></i></a>
+                    <a class="btnn" href="Projects.html" id="active">Projects <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu">
                         <li><a href="Branding.html">Branding</a></li>
                         <li><a href="#">create that UX</a></li>
@@ -145,7 +145,8 @@
                     <h3>Project Name</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
                         dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
-                        blandit justo, vel dictum neque ex vel diam.</p>
+                        blandit justo, vel dictum neque ex vel diam.
+                    </p>
                     <div>    
                         <a href="#" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
                     </div>
