--- a/Resume.html
+++ b/Resume.html
@@ -23,7 +23,7 @@
             <ul class="head">
                 <li><a class="btnn" href="index.html">Home</a></li>
                 <li><a class="btnn" href="About.html">About</i></a></li>
-                <li><a class="btnn" class="btnn" href="Resume.html">Resume</a></li>
+                <li><a class="btnn" href="Resume.html" id="active">Resume</a></li>
                 <li class="menu">
                     <a class="btnn" href="Projects.html">Projects <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu">
