--- a/About.html
+++ b/About.html
@@ -21,12 +21,12 @@
             <input type='checkbox' id='check' />
             <ul class="head">
                 <li><a class="btnn" href="index.html">Home</a></li>
-                <li><a class="btnn" href="About.html">About</i></a></li>
+                <li><a class="btnn" href="About.html" id="active">About</i></a></li>
                 <li><a class="btnn" href="Resume.html">Resume</a></li>
                 <li class="menu">
                     <a class="btnn" href="Projects.html">Projects <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu">
-                        <li><a href="#">Branding</a></li>
+                        <li><a href="Branding.html">Branding</a></li>
                         <li><a href="#">create that UX</a></li>
                         <li><a href="#">personal project</a></li>
                         <li><a href="#">development project</a></li>
