--- a/Branding.html
+++ b/Branding.html
@@ -25,9 +25,9 @@
                 <li><a class="btnn" href="About.html">About</i></a></li>
                 <li><a class="btnn" href="Resume.html">Resume</a></li>
                 <li class="menu">
-                    <a class="btnn" ="Projects.html">Projects <i class="fa-solid fa-caret-down"></i></a>
+                    <a class="btnn" ="Projects.html" id="active">Projects <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu">
-                        <li><a href="#">Branding</a></li>
+                        <li><a href="Branding.html" id="active">Branding</a></li>
                         <li><a href="#">create that UX</a></li>
                         <li><a href="#">personal project</a></li>
                         <li><a href="#">development project</a></li>
@@ -50,6 +50,7 @@
         </div>
     </header>
 
+    <!-- gallery-section -->
     <section class="gallery">
         <div class="wrapper">
             <div class="container">
@@ -95,6 +96,147 @@
                 </label>
             </div>
         </div>
+
+        <!-- gallery section for mobile -->
+        <div class="slider">
+            <div class="list">
+                <div class="item">
+                    <img src="img/image slider hero html css js.png" alt="">
+                </div>
+                <div class="item">
+                    <img src="img/pexels-goumbik-574071.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="img/pexels-luis-gomes-166706-546819.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="img/pexels-eessoo-5098043.jpg" alt="">
+                </div>
+            </div>
+            <div class="buttons">
+                <button id="prev"><</button>
+                <button id="next">></button>
+            </div>
+            <ul class="dots">
+                <li class="active"></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
     </section>
+
+    <!-- branding-section -->
+    <section class="branding">
+        <h2>BRANDING</h2>
+        <div class="branding-grid" >
+            <div class="grid-text" id="slide-iimg">
+                <h3>Result:</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Consequuntur laboriosam accusamus nisi eos, facilis temporibus 
+                    molestiae suscipit, deleniti officia harum dolores adipisci cumque. 
+                    Perferendis quos repudiandae doloremque fugit inventore? Doloremque explicabo quisquam, 
+                    fuga odio iure qui? Magnam minima pariatur in ab laudantium omnis odit nam, neque cum. 
+                    Nostrum harum ea tempora ex provident pariatur iusto dolores soluta sint fugiat culpa 
+                    doloremque id totam repudiandae maxime repellendus enim, velit, quos, 
+                    cumque quis reiciendis eum est. Eum aliquid pariatur dolor molestias sapiente 
+                    blanditiis corrupti sit doloremque, mollitia dignissimos corporis placeat ipsa, 
+                    tempore minus possimus. Laboriosam minus cupiditate fugiat ex similique 
+                    nisi quasi placeat id velit aliquid blanditiis corporis, optio odit ad dolores 
+                    ipsum tempora cum. Natus, alias! Dolore eligendi magnam reprehenderit reiciendis, 
+                    amet nisi suscipit atque autem quod dolorum quibusdam omnis debitis nemo, provident 
+                    maiores sequi ex dicta possimus sit rem. Sed explicabo repellat perspiciatis dolorum 
+                    error accusamus laborum vero aut at.
+                </p>
+                <div class="pop-img">
+                    <div class="imageSliderContainer">
+                        <div class="sliderBox" onclick="openPopup(0)"><img src="img/pexels-eessoo-5098043.jpg" alt="Image 1"></div>
+                        <div class="sliderBox" onclick="openPopup(1)"><img src="img/pexels-goumbik-574071.jpg" alt="Image 2"></div>
+                        <div class="sliderBox" onclick="openPopup(2)"><img src="img/pexels-harold-vasquez-853421-2653362.jpg" alt="Image 3"></div>
+                    </div>
+                
+                    <div class="popupOverlay" id="imagePopup">
+                        <div class="popupContent">
+                            <a class="closeButton" onclick="closePopup()">×</a>
+                            <div class="popupImageSlider">
+                                <img class="popupImage" src="img/pexels-eessoo-5098043.jpg" alt="Image 1">
+                                <img class="popupImage" src="img/pexels-goumbik-574071.jpg" alt="Image 2">
+                                <img class="popupImage" src="img/pexels-harold-vasquez-853421-2653362.jpg" alt="Image 3">
+                            </div>
+                            <a class="prevArrow" onclick="changeSlide(-1)"><i class="fa-solid fa-square-caret-left"></i></a>
+                            <a class="nextArrow" onclick="changeSlide(1)"><i class="fa-solid fa-square-caret-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-text">
+                <h3>ASSIGNMENT:</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Expedita soluta facilis iusto fugiat ipsum praesentium in
+                    consectetur necessitatibus vel sit ullam libero voluptate
+                    officiis rerum aut natus, magni dolorem labore!
+                </p>
+            </div>            
+            <div class="grid-text" id="grid-text-line-none">
+                <h3>CONTENT STRATEGIE:</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Expedita soluta facilis iusto fugiat ipsum praesentium in
+                    consectetur necessitatibus vel sit ullam libero voluptate
+                    officiis rerum aut natus, magni dolorem labore!
+                </p>
+            </div>            
+            <div class="grid-text" id="slide-iimg">
+                <h3>feedback:</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Expedita soluta facilis iusto fugiat ipsum praesentium in
+                    consectetur necessitatibus vel sit ullam libero voluptate
+                    officiis rerum aut natus, magni dolorem labore!
+                </p>
+                <div class="pop-img">
+                    <div class="imageSliderContainer">
+                        <div class="sliderBox" onclick="openPopup(0)"><img src="img/pexels-eessoo-5098043.jpg" alt="Image 1"></div>
+                        <div class="sliderBox" onclick="openPopup(1)"><img src="img/pexels-goumbik-574071.jpg" alt="Image 2"></div>
+                        <div class="sliderBox" onclick="openPopup(2)"><img src="img/pexels-harold-vasquez-853421-2653362.jpg" alt="Image 3"></div>
+                    </div>
+                
+                    <div class="popupOverlay" id="imagePopup">
+                        <div class="popupContent">
+                            <button class="closeButton" onclick="closePopup()">×</button>
+                            <div class="popupImageSlider">
+                                <img class="popupImage" src="img/pexels-eessoo-5098043.jpg" alt="Image 1">
+                                <img class="popupImage" src="img/pexels-goumbik-574071.jpg" alt="Image 2">
+                                <img class="popupImage" src="img/pexels-harold-vasquez-853421-2653362.jpg" alt="Image 3">
+                            </div>
+                            <a class="prevArrow" onclick="changeSlide(-1)"><i class="fa-solid fa-square-caret-left"></i></a>
+                            <a class="nextArrow" onclick="changeSlide(1)"><i class="fa-solid fa-square-caret-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>            
+            <div class="grid-text">
+                <h3>PROJECT DESCRIPTION:</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Expedita soluta facilis iusto fugiat ipsum praesentium in
+                    consectetur necessitatibus vel sit ullam libero voluptate
+                    officiis rerum aut natus, magni dolorem labore!
+                </p>
+            </div>            
+            <div class="grid-text" id="grid-text-line-none">
+                <h3>RESEARCH:</h3>
+                <p id="grid-text-line-none0" >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Expedita soluta facilis iusto fugiat ipsum praesentium in
+                    consectetur necessitatibus vel sit ullam libero voluptate
+                    officiis rerum aut natus, magni dolorem labore!
+                </p>
+                <div class="btn">
+                    <a class="btnn-1" href="#">More Detdetails <i class="fa-solid fa-caret-right"></i></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="pop-up-image.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
