--- a/Projects.html
+++ b/Projects.html
@@ -49,20 +49,23 @@
         </div>
     </header>
 
-    <!-- Learning-Outcomes-section -->
+    <!-- Projects -->
     <section class="Learning-Outcomes-section" id="Learning-Outcomes">
         <h2>Projects</h2>
         <div class="main">
             <div class="card" id="card-1">
                 <div class="slideshow-container" data-slide-index="1">
                     <div class="mySlides fade">
-                        <img src="img/international-student-navigator-australia-e8IU0GSw3ag-unsplash.jpg" alt="image1">
+                        <img src="img/Owen bryce1.png" alt="image1">
                     </div>
                     <div class="mySlides fade">
-                        <img src="img/pexels-mthan-10969375.jpg" alt="image2">
+                        <img src="img/Owen bryce2.png" alt="image2">
                     </div>
                     <div class="mySlides fade">
-                        <img src="img/pexels-eessoo-5098043.jpg" alt="image3">
+                        <img src="img/Owen bryce3.png" alt="image3">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="img/owen bryce4.png" alt="image4">
                     </div>
 
                     <!-- Next and previous buttons -->
@@ -73,13 +76,12 @@
                         <span class="dot" onclick="currentSlide(1)"></span>
                         <span class="dot" onclick="currentSlide(2)"></span>
                         <span class="dot" onclick="currentSlide(3)"></span>
+                        <span class="dot" onclick="currentSlide()"></span>
                     </div>
                 </div>
                 <div class="contact">
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
-                        dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
-                        blandit justo, vel dictum neque ex vel diam.</p>
+                    <h3>Branding</h3>
+                    <p>Crafted a bold and modern brand identity for Owen Bryce, blending sleek design with a strong personal touch.</p>
                     <div>    
                         <a href="#" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
                     </div>
@@ -89,30 +91,20 @@
             <div class="card" id="card-2">
                 <div class="slideshow-container" data-slide-index="1">
                     <div class="mySlides fade">
-                        <img src="img/international-student-navigator-australia-e8IU0GSw3ag-unsplash.jpg" alt="image1">
+                        <img src="img/coming soon.jpg" alt="image1">
                     </div>
-                    <div class="mySlides fade">
-                        <img src="img/pexels-mthan-10969375.jpg" alt="image2">
-                    </div>
-                    <div class="mySlides fade">
-                        <img src="img/pexels-eessoo-5098043.jpg" alt="image3">
-                    </div>
-
                     <!-- Next and previous buttons -->
                     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                     <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
                     <div class="main-dot" style="text-align: center;">
                         <span class="dot" onclick="currentSlide(1)"></span>
-                        <span class="dot" onclick="currentSlide(2)"></span>
-                        <span class="dot" onclick="currentSlide(3)"></span>
+
                     </div>
                 </div>
                 <div class="contact">
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
-                        dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
-                        blandit justo, vel dictum neque ex vel diam.</p>
+                    <h3>Create that UX </h3>
+                    <p>Designed a user-friendly UX for the Picoo app that makes learning and playing seamless for kids—while keeping it intuitive and practical for teachers.</p>
                     <div>    
                         <a href="#" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
                     </div>
@@ -122,13 +114,7 @@
             <div class="card" id="card-3">
                 <div class="slideshow-container" data-slide-index="1">
                     <div class="mySlides fade">
-                        <img src="img/international-student-navigator-australia-e8IU0GSw3ag-unsplash.jpg" alt="image1">
-                    </div>
-                    <div class="mySlides fade">
-                        <img src="img/pexels-mthan-10969375.jpg" alt="image2">
-                    </div>
-                    <div class="mySlides fade">
-                        <img src="img/pexels-eessoo-5098043.jpg" alt="image3">
+                        <img src="img/coming soon.jpg" alt="image1">
                     </div>
 
                     <!-- Next and previous buttons -->
@@ -137,15 +123,11 @@
 
                     <div class="main-dot" style="text-align: center;">
                         <span class="dot" onclick="currentSlide(1)"></span>
-                        <span class="dot" onclick="currentSlide(2)"></span>
-                        <span class="dot" onclick="currentSlide(3)"></span>
                     </div>
                 </div>
                 <div class="contact">
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
-                        dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
-                        blandit justo, vel dictum neque ex vel diam.</p>
+                    <h3>Personal Project</h3>
+                    <p>A self-initiated project where I explored creative freedom, refined my design skills, and brought a personal vision to life.</p>
                     <div>    
                         <a href="#" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
                     </div>
@@ -155,13 +137,7 @@
             <div class="card" id="card-1">
                 <div class="slideshow-container" data-slide-index="1">
                     <div class="mySlides fade">
-                        <img src="img/image slider hero html css js.png" alt="image1">
-                    </div>
-                    <div class="mySlides fade">
-                        <img src="img/Screenshot 2025-01-15 223506.png" alt="image2">
-                    </div>
-                    <div class="mySlides fade">
-                        <img src="img/Screenshot 2025-01-15 223524.png" alt="image3">
+                        <img src="img/coming soon.jpg" alt="image1">
                     </div>
     
                     <!-- Next and previous buttons -->
@@ -170,14 +146,11 @@
     
                     <div class="main-dot" style="text-align: center;">
                         <span class="dot" onclick="currentSlide(1)"></span>
-                        <span class="dot" onclick="currentSlide(2)"></span>
-                        <span class="dot" onclick="currentSlide(3)"></span>
                     </div>
                 </div>
                 <div class="contact">
-                    <h3>Interactive Image Slider</h3>
-                    <p>A responsive image slider with smooth transitions, built using HTML, CSS, and JavaScript.
-                        Perfect for showcasing visuals in a modern, engaging way. Lightweight, customizable, and user-friendly for any project.</p>
+                    <h3>development project </h3>
+                    <p>A personal development project where I combined creativity with code—using HTML, CSS, and JavaScript to design, build, and bring interactive ideas to life.</p>
                     <div>    
                         <a href="https://ic0nk.github.io/image-slider-hero-html-css-js/" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
                     </div>
