branding page done

--- a/Branding.html
+++ b/Branding.html
@@ -236,6 +236,25 @@
         </div>
     </section>
 
+    <!-- guide section -->
+    <section class="guide">
+        <div class="branding-guide">
+            <h2>BRANDGUIDE:</h2>
+            <div class="image8">
+                <img src="img/image 18.png" alt="image">
+            </div>
+        </div>
+        <div class="logos00">
+            <h2>LOGO’S:</h2>
+            <div class="logos-4">
+                <img id="logos-1" src="img/image 15.png" alt="logo1">
+                <img id="logos-2" src="img/image 16.png" alt="logo2">
+                <img id="logos-3" src="img/image 17.png" alt="logo3">
+                <img id="logos-4" src="img/image 14.png" alt="logo4">
+            </div>
+        </div>
+    </section>
+
     <script src="pop-up-image.js"></script>
     <script src="script.js"></script>
 </body>
