--- a/Projects.html
+++ b/Projects.html
@@ -83,7 +83,7 @@
                     <h3>Branding</h3>
                     <p>Crafted a bold and modern brand identity for Owen Bryce, blending sleek design with a strong personal touch.</p>
                     <div>    
-                        <a href="#" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
+                        <a href="Branding.html" class="btn">know more <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
