--- a/Projects.html
+++ b/Projects.html
@@ -40,7 +40,6 @@
                         <li><a href="Development&version-control.html">LO3: Development & version control</a></li>
                         <li><a href="Professional-Standard.html">LO4: Professional Standard</a></li>
                         <li><a href="Personal-Leadership.html">LO5: Personal Leadership</a></li>
-                        <li><a href="User-Research.html">User Research</a></li>
                     </ul>
                 </li>
                 <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
@@ -106,7 +105,7 @@
                     <h3>Create that UX </h3>
                     <p>Designed a user-friendly UX for the Picoo app that makes learning and playing seamless for kids—while keeping it intuitive and practical for teachers.</p>
                     <div>    
-                        <a href="#" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
+                        <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -134,7 +133,7 @@
                 </div>
             </div>
 
-            <div class="card" id="card-1">
+            <div class="card" id="card-4">
                 <div class="slideshow-container" data-slide-index="1">
                     <div class="mySlides fade">
                         <img src="img/coming soon.jpg" alt="image1">
@@ -152,7 +151,7 @@
                     <h3>development project </h3>
                     <p>A personal development project where I combined creativity with code—using HTML, CSS, and JavaScript to design, build, and bring interactive ideas to life.</p>
                     <div>    
-                        <a href="https://ic0nk.github.io/image-slider-hero-html-css-js/" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
+                        <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
