--- a/Learning Outcomes.html
+++ b/Learning Outcomes.html
@@ -40,7 +40,6 @@
                         <li><a href="Development&version-control.html">LO3: Development & version control</a></li>
                         <li><a href="Professional-Standard.html">LO4: Professional Standard</a></li>
                         <li><a href="Personal-Leadership.html">LO5: Personal Leadership</a></li>
-                        <li><a href="User-Research.html">User Research</a></li>
                     </ul>
                 </li>
                 <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
@@ -81,7 +80,7 @@
                         dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
                         blandit justo, vel dictum neque ex vel diam.</p>
                     <div>    
-                        <a href="#" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
+                        <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -114,7 +113,7 @@
                         dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
                         blandit justo, vel dictum neque ex vel diam.</p>
                     <div>    
-                        <a href="#" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
+                        <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -147,30 +146,21 @@
                         dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
                         blandit justo, vel dictum neque ex vel diam.</p>
                     <div>    
-                        <a href="#" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
+                        <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
 
-            <div class="card4">
-                <h1>im just trying to do the best thing of me</h1>
-            </div>
-        </div>
-    </section>
-
-    <!-- Templates section -->
-    <section class="templates-section">
-        <div class="main">
-            <div class="card0" id="card-1">
+            <div class="card" id="card-4">
                 <div class="slideshow-container" data-slide-index="1">
                     <div class="mySlides fade">
-                        <img src="img/image slider hero html css js.png" alt="image1">
+                        <img src="img/international-student-navigator-australia-e8IU0GSw3ag-unsplash.jpg" alt="image1">
                     </div>
                     <div class="mySlides fade">
-                        <img src="img/Screenshot 2025-01-15 223506.png" alt="image2">
+                        <img src="img/pexels-mthan-10969375.jpg" alt="image2">
                     </div>
                     <div class="mySlides fade">
-                        <img src="img/Screenshot 2025-01-15 223524.png" alt="image3">
+                        <img src="img/pexels-eessoo-5098043.jpg" alt="image3">
                     </div>
 
                     <!-- Next and previous buttons -->
@@ -184,61 +174,26 @@
                     </div>
                 </div>
                 <div class="contact">
-                    <h3>Interactive Image Slider</h3>
-                    <p>A responsive image slider with smooth transitions, built using HTML, CSS, and JavaScript.
-                        Perfect for showcasing visuals in a modern, engaging way. Lightweight, customizable, and user-friendly for any project.</p>
+                    <h3>Project Name</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
+                        dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
+                        blandit justo, vel dictum neque ex vel diam.</p>
                     <div>    
-                        <a href="https://ic0nk.github.io/image-slider-hero-html-css-js/" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
+                        <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
 
-            <div class="card0" id="card-2">
+            <div class="card" id="card-5">
                 <div class="slideshow-container" data-slide-index="1">
                     <div class="mySlides fade">
-                        <img src="img/slider 1.1.png" alt="image1">
+                        <img src="img/international-student-navigator-australia-e8IU0GSw3ag-unsplash.jpg" alt="image1">
                     </div>
                     <div class="mySlides fade">
-                        <img src="img/slider 1.2.png" alt="image2">
+                        <img src="img/pexels-mthan-10969375.jpg" alt="image2">
                     </div>
                     <div class="mySlides fade">
-                        <img src="img/slider 1.3.png" alt="image3">
-                    </div>
-                    <div class="mySlides fade">
-                        <img src="img/slider 1.4.png" alt="image4">
-                    </div>
-
-                    <!-- Next and previous buttons -->
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-                    <div class="main-dot" style="text-align: center;">
-                        <span class="dot" onclick="currentSlide(1)"></span>
-                        <span class="dot" onclick="currentSlide(2)"></span>
-                        <span class="dot" onclick="currentSlide(3)"></span>
-                        <span class="dot" onclick="currentSlide(4)"></span>
-                    </div>
-                </div>
-                <div class="contact">
-                    <h3> Sliding Image Card</h3>
-                    <p>A sleek sliding image card built with HTML, CSS, and JavaScript. Features smooth hover animations and transitions,
-                        ideal for showcasing content in a modern and engaging way.</p>
-                    <div>    
-                        <a href="https://ic0nk.github.io/sliding-image-card/" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card0" id="card-3">
-                <div class="slideshow-container" data-slide-index="1">
-                    <div class="mySlides fade">
-                        <img src="img/card slide 1.1.png" alt="image1">
-                    </div>
-                    <div class="mySlides fade">
-                        <img src="img/card slide 1.2.png" alt="image2">
-                    </div>
-                    <div class="mySlides fade">
-                        <img src="img/card slide 1.3.png" alt="image3">
+                        <img src="img/pexels-eessoo-5098043.jpg" alt="image3">
                     </div>
 
                     <!-- Next and previous buttons -->
@@ -252,17 +207,14 @@
                     </div>
                 </div>
                 <div class="contact">
-                    <h3>Card Slide</h3>
-                    <p>A dynamic card-slide component built with HTML, CSS, and JavaScript. 
-                        Features smooth sliding animations and hover effects, perfect for displaying content in a modern and engaging way.</p>
+                    <h3>Project Name</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
+                        dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
+                        blandit justo, vel dictum neque ex vel diam.</p>
                     <div>    
-                        <a href="https://ic0nk.github.io/card-slide/" target="_blank" class="btn">Visit Site <i class="fa-solid fa-caret-right"></i></a>
+                        <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
-            </div>
-
-            <div class="card4">
-                <h1>im just trying to do the best thing of me</h1>
             </div>
         </div>
     </section>
