--- a/Interactive-Media-Products.html
+++ b/Interactive-Media-Products.html
@@ -55,6 +55,44 @@
 
     <section class="LO1">
         <h2>Learning Outcomes LO1: Interactive Media Products</h2>
+        <div class="LO1-continer">
+            <div class="grid1">
+                <div class="grid-text">
+                    <h2>GOAL:</h2>
+                    <p>Select from our exciting options whether you prefer a guided tour or a self-driven rental, the choice is yours to create your perfect experience on the water.</p>
+                </div>
+                <div class="grid-n-1" id="num">
+                    <span>1</span>
+                </div>
+            </div>
+            <div class="grid2">
+                <div class="grid-n-2" id="num">
+                    <span>2</span>
+                </div>
+                <div class="grid-text">
+                    <h2>ACTION:</h2>
+                    <p>Find a date and time that fits your schedule. We offer flexible options so you can enjoy your adventure at your convenience.</p>
+                </div>
+            </div>
+            <div class="grid3">
+                <div class="grid-text">
+                    <h2>IMPROVEMENTS</h2>
+                    <p>Reserve your spot effortlessly by booking through our user friendly website or speaking directly to our team via phone it’s quick and easy.</p>
+                </div>
+                <div class="grid-n-3" id="num">
+                    <span>3</span>
+                </div>
+            </div>
+            <div class="grid4">
+                <div class="grid-n-4" id="num">
+                    <span>4</span>
+                </div>
+                <div class="grid-text">
+                    <h2>REFLECTION:</h2>
+                    <p>Relax and have fun as you set off for an unforgettable journey filled with thrills, stunning views, and pure enjoyment.</p>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
