--- a/Learning Outcomes.html
+++ b/Learning Outcomes.html
@@ -55,7 +55,7 @@
             <div class="card" id="card-1">
                 <div class="slideshow-container" data-slide-index="1">
                     <div class="mySlides fade">
-                        <img src="img/international-student-navigator-australia-e8IU0GSw3ag-unsplash.jpg" alt="image1">
+                        <img src="img/interactive media products.jpg" alt="image1">
                     </div>
                     <div class="mySlides fade">
                         <img src="img/pexels-mthan-10969375.jpg" alt="image2">
@@ -75,10 +75,8 @@
                     </div>
                 </div>
                 <div class="contact">
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
-                        dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
-                        blandit justo, vel dictum neque ex vel diam.</p>
+                    <h3>LO1: Interactive Media Products</h3>
+                    <p>You explore the world of technology, media, and design, and create interactive media products that are tested and improved based on feedback from users and stakeholders.</p>
                     <div>    
                         <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
@@ -88,7 +86,7 @@
             <div class="card" id="card-2">
                 <div class="slideshow-container" data-slide-index="1">
                     <div class="mySlides fade">
-                        <img src="img/international-student-navigator-australia-e8IU0GSw3ag-unsplash.jpg" alt="image1">
+                        <img src="img/de" alt="image1">
                     </div>
                     <div class="mySlides fade">
                         <img src="img/pexels-mthan-10969375.jpg" alt="image2">
@@ -108,10 +106,8 @@
                     </div>
                 </div>
                 <div class="contact">
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
-                        dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
-                        blandit justo, vel dictum neque ex vel diam.</p>
+                    <h3>LO2: Development and Version Control</h3>
+                    <p>You learn and apply front-end development languages, write clean and functional code, and manage your work using version control tools to track progress and collaborate effectively.</p>
                     <div>    
                         <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
@@ -141,10 +137,8 @@
                     </div>
                 </div>
                 <div class="contact">
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
-                        dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
-                        blandit justo, vel dictum neque ex vel diam.</p>
+                    <h3>LO3: Iterative Design</h3>
+                    <p>You use professional design tools to develop visual work, continuously refining your designs through feedback and multiple iterations to improve quality and effectiveness.</p>
                     <div>    
                         <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
@@ -174,10 +168,8 @@
                     </div>
                 </div>
                 <div class="contact">
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
-                        dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
-                        blandit justo, vel dictum neque ex vel diam.</p>
+                    <h3>LO4: Professional Standard</h3>
+                    <p>You demonstrate professional practice by organizing projects, communicating effectively with stakeholders, conducting exploratory research, and reporting your findings—both individually and as part of a team.</p>
                     <div>    
                         <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
@@ -207,10 +199,8 @@
                     </div>
                 </div>
                 <div class="contact">
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae facilisis justo. Nullam viverra
-                        dapibus velit, et efficitur felis ullamcorper nec. Sed vulputate, erat in maximus laoreet, metus diam
-                        blandit justo, vel dictum neque ex vel diam.</p>
+                    <h3>LO5: Personal Leadership</h3>
+                    <p>You take initiative by seeking and reflecting on feedback, while identifying your core values to guide your study path and professional growth.</p>
                     <div>    
                         <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
