change learnin outcomes

--- a/Learning Outcomes.html
+++ b/Learning Outcomes.html
@@ -86,7 +86,7 @@
             <div class="card" id="card-2">
                 <div class="slideshow-container" data-slide-index="1">
                     <div class="mySlides fade">
-                        <img src="img/de" alt="image1">
+                        <img src="img/image 22.png" alt="image1">
                     </div>
                     <div class="mySlides fade">
                         <img src="img/pexels-mthan-10969375.jpg" alt="image2">
@@ -117,7 +117,7 @@
             <div class="card" id="card-3">
                 <div class="slideshow-container" data-slide-index="1">
                     <div class="mySlides fade">
-                        <img src="img/international-student-navigator-australia-e8IU0GSw3ag-unsplash.jpg" alt="image1">
+                        <img src="img/Iterative Design.jpg" alt="image1">
                     </div>
                     <div class="mySlides fade">
                         <img src="img/pexels-mthan-10969375.jpg" alt="image2">
@@ -148,7 +148,7 @@
             <div class="card" id="card-4">
                 <div class="slideshow-container" data-slide-index="1">
                     <div class="mySlides fade">
-                        <img src="img/international-student-navigator-australia-e8IU0GSw3ag-unsplash.jpg" alt="image1">
+                        <img src="img/Professional Standard.jpg" alt="image1">
                     </div>
                     <div class="mySlides fade">
                         <img src="img/pexels-mthan-10969375.jpg" alt="image2">
@@ -179,7 +179,7 @@
             <div class="card" id="card-5">
                 <div class="slideshow-container" data-slide-index="1">
                     <div class="mySlides fade">
-                        <img src="img/international-student-navigator-australia-e8IU0GSw3ag-unsplash.jpg" alt="image1">
+                        <img src="img/Personal Leadership.jpg" alt="image1">
                     </div>
                     <div class="mySlides fade">
                         <img src="img/pexels-mthan-10969375.jpg" alt="image2">
