+change Interactive-Media-Products

--- a/Interactive-Media-Products.html
+++ b/Interactive-Media-Products.html
@@ -59,7 +59,7 @@
             <div class="grid1">
                 <div class="grid-text">
                     <h2>GOAL:</h2>
-                    <p>Select from our exciting options whether you prefer a guided tour or a self-driven rental, the choice is yours to create your perfect experience on the water.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore enim asperiores optio a sed, illum consequatur saepe laboriosam est suscipit, eveniet voluptas incidunt aut quasi magnam, neque maxime magni doloremque?</p>
                 </div>
                 <div class="grid-n-1" id="num">
                     <span>1</span>
@@ -71,13 +71,13 @@
                 </div>
                 <div class="grid-text">
                     <h2>ACTION:</h2>
-                    <p>Find a date and time that fits your schedule. We offer flexible options so you can enjoy your adventure at your convenience.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore enim asperiores optio a sed, illum consequatur saepe laboriosam est suscipit, eveniet voluptas incidunt aut quasi magnam, neque maxime magni doloremque?</p>
                 </div>
             </div>
             <div class="grid3">
                 <div class="grid-text">
                     <h2>IMPROVEMENTS</h2>
-                    <p>Reserve your spot effortlessly by booking through our user friendly website or speaking directly to our team via phone it’s quick and easy.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore enim asperiores optio a sed, illum consequatur saepe laboriosam est suscipit, eveniet voluptas incidunt aut quasi magnam, neque maxime magni doloremque?</p>
                 </div>
                 <div class="grid-n-3" id="num">
                     <span>3</span>
@@ -89,10 +89,84 @@
                 </div>
                 <div class="grid-text">
                     <h2>REFLECTION:</h2>
-                    <p>Relax and have fun as you set off for an unforgettable journey filled with thrills, stunning views, and pure enjoyment.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore enim asperiores optio a sed, illum consequatur saepe laboriosam est suscipit, eveniet voluptas incidunt aut quasi magnam, neque maxime magni doloremque?</p>
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="WHAT-I-LEARNED">
+        <h2>WHAT I LEARNED THROUGH THIS PROCESS:</h2>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Dicta magnam saepe maxime quam, delectus tenetur amet unde,
+            dolores quis dolorum cupiditate odit! Quia impedit consequatur
+            iusto cupiditate, ullam doloribus, illum ab repellendus atque blanditiis possimus.
+            Ratione corporis in porro sit nemo distinctio eaque possimus, dicta sed officia saepe
+            quas expedita harum inventore autem provident quaerat iure similique cumque! Similique 
+            ullam beatae nulla totam soluta libero illo eos dicta vel molestias! Placeat, cum enim
+            iusto odio sunt facilis soluta quis quam iste adipisci voluptatum alias necessitatibus
+            quod iure odit quia numquam nobis, a ipsam perspiciatis suscipit quae distinctio vitae
+            fugit? Atque!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Dicta magnam saepe maxime quam, delectus tenetur amet unde,
+            dolores quis dolorum cupiditate odit! Quia impedit consequatur
+            iusto cupiditate, ullam doloribus, illum ab repellendus atque blanditiis possimus.
+            Ratione corporis in porro sit nemo distinctio eaque possimus, dicta sed officia saepe
+            quas expedita harum inventore autem provident quaerat iure similique cumque! Similique 
+            ullam beatae nulla totam soluta libero illo eos dicta vel molestias! Placeat, cum enim
+            iusto odio sunt facilis soluta quis quam iste adipisci voluptatum alias necessitatibus
+            quod iure odit quia numquam nobis, a ipsam perspiciatis suscipit quae distinctio vitae
+            fugit? Atque!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Dicta magnam saepe maxime quam, delectus tenetur amet unde,
+            dolores quis dolorum cupiditate odit! Quia impedit consequatur
+            iusto cupiditate, ullam doloribus, illum ab repellendus atque blanditiis possimus.
+            Ratione corporis in porro sit nemo distinctio eaque possimus, dicta sed officia saepe
+            quas expedita harum inventore autem provident quaerat iure similique cumque! Similique 
+            ullam beatae nulla totam soluta libero illo eos dicta vel molestias! Placeat, cum enim
+            iusto odio sunt facilis soluta quis quam iste adipisci voluptatum alias necessitatibus
+            quod iure odit quia numquam nobis, a ipsam perspiciatis suscipit quae distinctio vitae
+            fugit? Atque!
+    </section>
+
+    <section class="WHAT-I-LEARNED why">
+        <h2>WHY IT MATTERS TO ME:</h2>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Dicta magnam saepe maxime quam, delectus tenetur amet unde,
+            dolores quis dolorum cupiditate odit! Quia impedit consequatur
+            iusto cupiditate, ullam doloribus, illum ab repellendus atque blanditiis possimus.
+            Ratione corporis in porro sit nemo distinctio eaque possimus, dicta sed officia saepe
+            quas expedita harum inventore autem provident quaerat iure similique cumque! Similique 
+            ullam beatae nulla totam soluta libero illo eos dicta vel molestias! Placeat, cum enim
+            iusto odio sunt facilis soluta quis quam iste adipisci voluptatum alias necessitatibus
+            quod iure odit quia numquam nobis, a ipsam perspiciatis suscipit quae distinctio vitae
+            fugit? Atque!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Dicta magnam saepe maxime quam, delectus tenetur amet unde,
+            dolores quis dolorum cupiditate odit! Quia impedit consequatur
+            iusto cupiditate, ullam doloribus, illum ab repellendus atque blanditiis possimus.
+            Ratione corporis in porro sit nemo distinctio eaque possimus, dicta sed officia saepe
+            quas expedita harum inventore autem provident quaerat iure similique cumque! Similique 
+            ullam beatae nulla totam soluta libero illo eos dicta vel molestias! Placeat, cum enim
+            iusto odio sunt facilis soluta quis quam iste adipisci voluptatum alias necessitatibus
+            quod iure odit quia numquam nobis, a ipsam perspiciatis suscipit quae distinctio vitae
+            fugit? Atque!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Dicta magnam saepe maxime quam, delectus tenetur amet unde,
+            dolores quis dolorum cupiditate odit! Quia impedit consequatur
+            iusto cupiditate, ullam doloribus, illum ab repellendus atque blanditiis possimus.
+            Ratione corporis in porro sit nemo distinctio eaque possimus, dicta sed officia saepe
+            quas expedita harum inventore autem provident quaerat iure similique cumque! Similique 
+            ullam beatae nulla totam soluta libero illo eos dicta vel molestias! Placeat, cum enim
+            iusto odio sunt facilis soluta quis quam iste adipisci voluptatum alias necessitatibus
+            quod iure odit quia numquam nobis, a ipsam perspiciatis suscipit quae distinctio vitae
+            fugit? Atque!
+    </section>
+
+    <section class="feedback">
+        
     </section>
 </body>
 </html>
