--- a/Interactive-Media-Products.html
+++ b/Interactive-Media-Products.html
@@ -128,6 +128,8 @@
             iusto odio sunt facilis soluta quis quam iste adipisci voluptatum alias necessitatibus
             quod iure odit quia numquam nobis, a ipsam perspiciatis suscipit quae distinctio vitae
             fugit? Atque!
+        </p>
+        <div class="image22"></div>
     </section>
 
     <section class="WHAT-I-LEARNED why">
@@ -163,6 +165,7 @@
             iusto odio sunt facilis soluta quis quam iste adipisci voluptatum alias necessitatibus
             quod iure odit quia numquam nobis, a ipsam perspiciatis suscipit quae distinctio vitae
             fugit? Atque!
+        </p>
     </section>
 
     <section class="feedback">
