--- a/Projects.html
+++ b/Projects.html
@@ -30,6 +30,7 @@
                         <li><a href="#">create that UX</a></li>
                         <li><a href="#">personal project</a></li>
                         <li><a href="#">development project</a></li>
+                        <li><a href="#">AI Gen</a></li>
                     </ul>
                 </li>
                 <li class="menu">
