--- a/Projects.html
+++ b/Projects.html
@@ -30,7 +30,7 @@
                         <li><a href="#">create that UX</a></li>
                         <li><a href="#">personal project</a></li>
                         <li><a href="#">development project</a></li>
-                        <li><a href="#">AI Gen</a></li>
+                        <li><a href="Aigeneration.html">AI generation</a></li>
                     </ul>
                 </li>
                 <li class="menu">
@@ -83,7 +83,7 @@
                     <h3>Branding</h3>
                     <p>Crafted a bold and modern brand identity for Owen Bryce, blending sleek design with a strong personal touch.</p>
                     <div>    
-                        <a href="Branding.html" class="btn">know more <i class="fa-solid fa-caret-right"></i></a>
+                        <a href="Branding.html" class="btn">View Page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -153,6 +153,24 @@
                     <p>A personal development project where I combined creativity with code—using HTML, CSS, and JavaScript to design, build, and bring interactive ideas to life.</p>
                     <div>    
                         <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="card" id="card-5">
+                <div class="slideshow-container" data-slide-index="1">
+                    <div class="mySlides fade">
+                        <img src="img/image 27.png" alt="image1">
+                    </div>
+    
+                    <div class="main-dot" style="text-align: center;">
+                        <span class="dot" onclick="currentSlide(1)"></span>
+                    </div>
+                </div>
+                <div class="contact">
+                    <h3>AI generation </h3>
+                    <p>Slight help from AI on a few parts, the rest is handcrafted.</p>
+                    <div>    
+                        <a href="Aigeneration.html" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
