--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                         <li><a href="#">create that UX</a></li>
                         <li><a href="#">personal project</a></li>
                         <li><a href="#">development project</a></li>
+                        <li><a href="Aigeneration.html">AI generation</a></li>
                     </ul>
                 </li>
                 <li class="menu">
@@ -58,7 +59,7 @@
             <p>Front-end Developer</p>
             <div class="btn">
                 <a class="button" href="Learning Outcomes.html">Learning Outcomes</a>
-                <a class="button" href="project.html">Projects</a>
+                <a class="button" href="Projects.html">Projects</a>
             </div>
         </div>
         <div class="social-media">
