--- a/Learning Outcomes.html
+++ b/Learning Outcomes.html
@@ -29,7 +29,7 @@
                         <li><a href="Branding.html">Branding</a></li>
                         <li><a href="#">create that UX</a></li>
                         <li><a href="#">personal project</a></li>
-                        <li><a href="#">development project</a></li>
+                        <li><a href="Aigeneration.html">AI generation</a></li>
                     </ul>
                 </li>
                 <li class="menu">
@@ -78,7 +78,7 @@
                     <h3>LO1: Interactive Media Products</h3>
                     <p>You explore the world of technology, media, and design, and create interactive media products that are tested and improved based on feedback from users and stakeholders.</p>
                     <div>    
-                        <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
+                        <a href="Interactive-Media-Products.html" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                     <h3>LO2: Development and Version Control</h3>
                     <p>You learn and apply front-end development languages, write clean and functional code, and manage your work using version control tools to track progress and collaborate effectively.</p>
                     <div>    
-                        <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
+                        <a href="Development&version-control.html" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -140,7 +140,7 @@
                     <h3>LO3: Iterative Design</h3>
                     <p>You use professional design tools to develop visual work, continuously refining your designs through feedback and multiple iterations to improve quality and effectiveness.</p>
                     <div>    
-                        <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
+                        <a href="Iterative-Design.html" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -171,7 +171,7 @@
                     <h3>LO4: Professional Standard</h3>
                     <p>You demonstrate professional practice by organizing projects, communicating effectively with stakeholders, conducting exploratory research, and reporting your findings—both individually and as part of a team.</p>
                     <div>    
-                        <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
+                        <a href="Professional-Standard.html" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -202,7 +202,7 @@
                     <h3>LO5: Personal Leadership</h3>
                     <p>You take initiative by seeking and reflecting on feedback, while identifying your core values to guide your study path and professional growth.</p>
                     <div>    
-                        <a href="#" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
+                        <a href="karim-massaoud-portfolio/Personal-Leadership.html" class="btn">View page <i class="fa-solid fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
