--- a/Resume.html
+++ b/Resume.html
@@ -27,10 +27,11 @@
                 <li class="menu">
                     <a class="btnn" href="Projects.html">Projects <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu">
-                        <li><a href="#">Branding</a></li>
+                        <li><a href="Branding.html">Branding</a></li>
                         <li><a href="#">create that UX</a></li>
                         <li><a href="#">personal project</a></li>
                         <li><a href="#">development project</a></li>
+                        <li><a href="Aigeneration.html">AI generation</a></li>
                     </ul>
                 </li>
                 <li class="menu">
